Fix vertical alignment issue with search button on homepage.

--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -15,6 +15,9 @@
     &-search {
         display: inline-block;
         position: relative;
+        > form {
+            margin: 0;
+        }
         .form-item-search-block-form {
             margin: 0;
             > label {
